// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponsivePanel on desktop renders Panel 1`] = `
<div>
  <div
    class="np-panel np-panel--open"
  >
    children
  </div>
</div>
`;

exports[`ResponsivePanel on mobile renders bottomSheet 1`] = `
<div>
  <div
    class="np-bottom-sheet"
  >
    children
  </div>
</div>
`;
